--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,10 @@ body {
     padding-right: 10px;
 }
 
+.menu-item:last-child {
+    border-right: none;
+}
+
 .search {
     display: flex;
     flex-direction: column;
@@ -191,18 +195,24 @@ body {
     display: flex;
     padding: 15px;
     margin: 10px;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .actions__mid {
     display: flex;
     padding: 15px;
     margin: 10px;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .actions__bot {
     display: flex;
     padding: 15px;
     margin: 10px;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .actions__doctors {
@@ -481,15 +491,23 @@ body {
     line-height: 130.4%;
 }
 
-.popular-doctor__title {
-    color: #000;
-    text-align: center;
+.popular-doctor-main__title {
+    display: flex;
+    justify-content: center;
+    color: rgba(0, 0, 0, 0.87);
     font-size: 24px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-bottom: 40px;
+    margin: 30px 0;
+}
+
+.popular-doctor-main__title h4 {
+    border-bottom: 1px solid #00000019;
+    width: 350px;
+    text-align: center;
+    padding-bottom: 10px;
 }
 
 .popular-doctor__doctors {
@@ -664,15 +682,23 @@ body {
     margin-bottom: 40px;
 }
 
-.other-clinics__title {
+.other-clinics-main__title {
+    display: flex;
+    justify-content: center;
     color: rgba(0, 0, 0, 0.87);
     font-size: 24px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    margin: 30px 0;
+}
+
+.other-clinics-main__title h4 {
+    border-bottom: 1px solid #00000019;
+    width: 350px;
     text-align: center;
-    margin: 40px 0;
+    padding-bottom: 10px;
 }
 
 .other-clinics__clinics {
@@ -828,9 +854,22 @@ body {
     line-height: normal;
 }
 
+.category__body {
+    display: flex;
+    flex-direction: column;
+}
+
+.category__body a {
+    text-align: center;
+    color: #516FA6;
+    font-family: Montserrat;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
 .category__items {
-    height: 200px;
-    /* width: 100%; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -850,7 +889,7 @@ body {
     align-items: center;
     align-content: center;
     flex-wrap: wrap;
-    width: 300px;
+    width: 350px;
 }
 
 .category__filter {
@@ -976,9 +1015,19 @@ body {
 .clinic-card {
     display: flex;
     justify-content: space-between;
-    margin: 15px 0;
     align-items: stretch;
     flex-direction: row;
+}
+
+.clinic-card-category__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #FFF;
+    box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
+    padding: 40px 25px;
+    margin: 25px 0;
+    border-radius: 13px;
 }
 
 .clinic-card__footer {
@@ -987,11 +1036,14 @@ body {
 }
 
 .clinic-card__container {
-    padding: 20px;
-    margin: 25px 0;
-    border-radius: 13px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: #FFF;
     box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
+    padding: 40px 25px;
+    margin: 25px 0;
+    border-radius: 13px;
 }
 
 .clinic-card__footer h3 {
@@ -1102,10 +1154,6 @@ body {
     align-items: center;
 }
 
-.clinic-card__right img {
-    max-width: 350px;
-}
-
 .clinic-card__body-right {
     border-radius: 4px;
     border: 1px solid rgba(81, 111, 166, 0.50);
@@ -1187,10 +1235,21 @@ body {
     width: 30px;
 }
 
-.clinic-card__footer {
+.clinic-card-listing__footer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    padding: 20px 80px;
+}
+
+.clinic-card-listing__container {
+    border-radius: 13px;
+    background: #FFF;
+    box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
+    padding: 15px;
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .clinic-card__body-left p {
@@ -1223,8 +1282,14 @@ body {
     justify-content: space-around;
 }
 
+.clinic-card__right-map img {
+    max-width: 350px;
+    margin: 10px;
+}
+
 .clinic-card__right {
-    width: 350px;
+    max-width: 350px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -1392,13 +1457,14 @@ body {
     line-height: normal;
 }
 
-.clinic-card__phone {
+.clinic-card__phone a {
     color: #000;
     font-size: 16px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    text-decoration-line: none;
 }
 
 .clinic-card__popular-procedure {
@@ -1406,6 +1472,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     margin: 15px 0;
+    width: 43%;
 }
 
 .clinic-card__popular-procedure-price {
@@ -1418,9 +1485,14 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     border-top: 1px solid #0000001A;
     padding: 10px 0;
+    width: 80%;
+}
+
+.prices {
+    display: flex;
 }
 
 .clinic-card__popular-procedure-price p {
@@ -1511,8 +1583,8 @@ body {
     text-align: center;
 }
 
-.first-questions {
-
+.answer-first-questions {
+    padding: 0 50px;
 }
 
 .first-questions p, .second-questions p, .third-questions p {
@@ -1642,6 +1714,7 @@ body {
     font-weight: 600;
     line-height: normal;
     text-align: center;
+    margin-bottom: 40px;
 }
 
 .review-card__container {
@@ -1722,6 +1795,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-right: 1px solid #00000019;
+    padding-right: 15px;
 }
 
 .doctor-review-card__name {
@@ -1879,6 +1954,11 @@ body {
     padding: 0;
 }
 
+.relinks__item img {
+    width: 25px;
+    margin-right: 10px;
+}
+
 .relinks__item a {
     color: #516FA6;
     font-size: 14px;
@@ -1900,7 +1980,7 @@ body {
     text-decoration-line: underline;
 }
 
-.services__block {
+.services-hub__block {
     border-radius: 13px;
     background: #FFF;
     box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
@@ -1908,7 +1988,7 @@ body {
     margin: 20px 0;
 }
 
-.services__block h2 {
+.services-hub__block h2 {
     color: #000;
     font-family: Montserrat;
     font-size: 28px;
@@ -1918,7 +1998,7 @@ body {
     padding-left: 60px;
 }
 
-.services__list {
+.services-hub__list {
     margin: 0;
     list-style-type: none;
     width: 100%;
@@ -1930,9 +2010,10 @@ body {
     align-items: flex-start;
     padding: 20px;
     align-content: space-around;
+    height: 150px;
 }
 
-.services__link {
+.services-hub__link {
     color: rgba(81, 111, 166, 0.80);
     font-family: Montserrat;
     font-size: 14px;
@@ -1942,7 +2023,7 @@ body {
     text-decoration-line: underline;
 }
 
-.services__more {
+.services-hub__more {
     text-align: center;
     width: 100%;
 }
@@ -2339,6 +2420,137 @@ body {
     margin: 10px 0;
 }
 
+.doctor-card__doctor-clinic-prices {
+    color: #000;
+    font-size: 16px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.doctor-card__doctor-clinic-prices p {
+    color: #000;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0 10px;
+}
+
+.doctor-card__doctor-clinic-prices span {
+    color: #FC5B5D;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line:line-through;
+}
+
+.doctor-card__schedule {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.doctor-card__right-record-title {
+    color: rgba(0, 0, 0, 0.80);
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.doctor-card__right-record {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.doctor-card-record__container {
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    display: flex;
+    flex-direction: column;
+    max-width: 480px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.doctor-card__listing__item h5 {
+    color: rgba(0, 0, 0, 0.80);
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border-bottom: 1px solid #00000019;
+    padding: 5px 0;
+}
+
+.doctor-card__listing__item h5:last-child {
+    border-top: 1px solid #00000019;
+    border-bottom: none;
+}
+
+.doctor-card__listing__item h6 {
+    color: rgba(0, 0, 0, 0.80);
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border-bottom: 1px solid #00000019;
+    padding: 5px 0;
+    border-top: 1px solid #00000019;
+}
+
+.doctor-card__listing__item {
+    padding: 20px;
+}
+
+.doctor-card__listing__item span {
+    color: #000;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: 10px;
+}
+
+.doctor-clinic-phone {
+    color: #000;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-decoration-line: none;
+}
+
+.doctor-card__dates p {
+    margin: 0;
+}
+
+.doctor-card__dates {
+    border-radius: 4px 0px 0px 4px;
+    background: rgba(81, 111, 166, 0.30);
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    padding: 5px 0;
+}
+
 .doctor-card {
     border-radius: 13px;
     background: #FFF;
@@ -2403,8 +2615,9 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding: 3px;
+    padding: 5px;
     margin: 5px 0;
+    width: max-content;
 }
 
 .doctor-card__doctor-degree {
@@ -2416,8 +2629,9 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding: 3px;
+    padding: 5px;
     margin: 5px 0;
+    width: max-content;
 }
 
 .doctor-card__center {
@@ -2633,9 +2847,6 @@ body {
     padding: 0 10px;
 }
 
-.listing {
-}
-
 .listing ul {
     list-style-type: none;
     margin: 0px;
@@ -2647,8 +2858,15 @@ body {
     align-items: center;
 }
 
-.listing ul li {
+.listing a {
     padding: 7px;
+    color: rgba(0, 0, 0, 0.54);
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    text-decoration-line: none;
+    line-height: normal;
 }
 
 .appointment__left {
@@ -2776,12 +2994,101 @@ body {
     width: 50%;
 }
 
+.appointment__timeslot h4 {
+    color: rgba(0, 0, 0, 0.80);
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+}
+
 .appointment__timeslot {
 
 }
 
+.appointment-date {
 
-.appointment__timeslot span {
+}
+
+.appointment-date ul {
+    list-style-type: none;
+    margin: 0 10px 0 0;
+    padding-right: 20px;
+    border-right: 1px solid #00000019;
+    height: 100%;
+}
+
+.appointment-record-container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin: 12px 0;
+}
+
+.appointment-date li {
+    padding: 10px 0;
+}
+
+.grey-col {
+    width: 51px;
+    height: 222px;
+    flex-shrink: 0;
+    border-radius: 4px 0px 0px 4px;
+    background: rgba(81, 111, 166, 0.30);
+}
+
+.appointment__name-patient input {
+    border-radius: 28px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+}
+
+.appointment__phone-patient input {
+    border-radius: 28px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    margin: 5px 15px 0 0;
+}
+
+.appointment__phone-patient {
+    margin: 8px 0;
+}
+
+.appointment-record {
+    margin-right: 15px;
+}
+
+.appointment-date {
+    padding: 15px 0;
+}
+
+.appointment__timeslot-container {
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    display: flex;
+    flex-direction: row;
+}
+
+.appointment-center {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 30px;
+    padding: 15px 30px;
+    justify-content: space-between;
+}
+
+.appointment-date a {
+    color: rgba(0, 0, 0, 0.80);
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+
+.appointment-center span {
     color: rgba(0, 0, 0, 0.70);
     font-family: Montserrat;
     font-size: 18px;
@@ -2790,7 +3097,7 @@ body {
     line-height: normal;
 }
 
-.appointment__timeslot a {
+.appointment-phone {
     color: rgba(0, 0, 0, 0.70);
     font-family: Montserrat;
     font-size: 18px;
@@ -2841,61 +3148,6 @@ body {
     padding: 5px 30px;
 }
 
-
-@media (max-width: 1200px) {
-    .actions__mid {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-
-    }
-
-    .actions__top {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .actions__bot {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .
-}
-
-@media (max-width: 1100px) {
-    .category__items {
-        height: auto;
-    }
-
-    .info-about-project__center {
-        padding: 10px 380px;
-    }
-}
-
-@media (max-width: 1000px) {
-    .info-about-project__center {
-        padding: 10px 310px;
-    }
-
-}
-
-@media (max-width: 900px) {
-    .info-about-project__center {
-        padding: 10px 240px;
-    }
-
-}
-
-@media (max-width: 900px) {
-    .info-about-project__center {
-        padding: 10px 150px;
-    }
-
-}
 
 
 .footer-wrap {
@@ -3665,9 +3917,6 @@ body {
     margin: 0 auto;
 }
 
-.users_btn {
-    display: flex;
-}
 .record__btn {
     padding: 10px 20px;
     z-index: 5;
@@ -3980,7 +4229,43 @@ body {
     padding: 5px 0;
 }
 
+.doctor-card__date {
+    background: #F0F3F8;
+    max-width: 381px;
+    width: 100%;
+    height: 46px;
+}
+
+.doctor-card__date p {
+    margin: 0;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.doctor-card__time-slot {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding-top: 15px;
+}
+
+.doctor-card__time {
+    display: flex;
+}
+
+.schedule__item img {
+    width: 20px;
+}
+
 .radio__label {
+    margin: 10px;
+    border-radius: 6px;
+    background: #516FA6;
+    color: #FFF;
     cursor: pointer;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3992,8 +4277,7 @@ body {
     -ms-flex-pack: center;
     justify-content: flex-start;
     gap: 8px;
-    padding: 13px 15px;
-    border-radius: 12px;
+    padding: 5px 15px;
     font-size: 0.875rem;
     line-height: 143%;
     -webkit-transition: all 0.3s ease-in-out 0s;
@@ -4027,9 +4311,7 @@ body {
 .doctor-card__listing {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 15px 0;
+    padding: 15px;
 }
 
 .doctor-card__clinic {
@@ -4070,6 +4352,7 @@ body {
     line-height: normal;
 }
 
+
 .other-clinics__photos img {
     width: 100px;
 }
@@ -4096,6 +4379,81 @@ body {
     align-items: center;
     margin: 10px 0;
     justify-content: space-between;
+}
+
+.license-clinic-title, .photo-clinic__title, .video-clinic__title {
+    color: #000;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin: 15px 0;
+}
+
+.users__record {
+    text-decoration-line: none;
+    color: rgba(0, 0, 0, 0.70);
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border-radius: 22px;
+    border: 1px solid #FD7C7D;
+    padding: 8px 15px;
+}
+
+.users_btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.users__more-review {
+    text-decoration-line: none;
+    color: rgba(0, 0, 0, 0.70);
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border-radius: 22px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    padding: 8px 15px;
+    margin-right: 25px;
+}
+
+.license-container img {
+    width: 100px;
+    height: 160px;
+    margin: 0 15px;
+}
+
+.photo-clinic__container img {
+    width: 204px;
+    height: 149px;
+    margin: 0 15px;
+}
+
+.media-clinic {
+    margin: 25px 0;
+}
+
+.video-clinic__container img {
+    width: 520px;
+    height: 298px;
+}
+
+.license-container, .photo-clinic__container , .video-clinic__container {
+    display: flex;
+    flex-direction: row;
+}
+
+.media-clinic {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .section-with-slider__navigation {
@@ -4167,8 +4525,136 @@ body {
     margin-top: -1px;
 }
 
+.popular-doctor__title {
+    text-align: center;
+}
+
+.popular-doctor {
+    margin: 20px 0;
+}
+
+.doctor-promotion {
+    border-radius: 4px;
+    border: 1px solid #FC5B5D;
+    background: rgba(252, 91, 93, 0.20);
+    margin-right: 25px;
+    padding: 8px;
+    width: 147px;
+    height: 80px;
+}
+
+.doctor-price-promotion {
+    display: flex;
+    flex-direction: row;
+}
+
+.doctor-old-price {
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    padding: 8px 15px;
+    width: 147px;
+    height: 80px;
+}
+
+.doctor-promotion p {
+    display: flex;
+    justify-content: space-around;
+}
+
+.doctor-promotion span {
+    color: #FC6B6D;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.doctor-promotion b {
+    color: #000;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    display: flex;
+    justify-content: space-around;
+
+}
 
 
+@media (max-width: 1200px) {
+
+}
+
+@media (max-width: 1100px) {
+    .category__items {
+        height: auto;
+    }
+
+    .info-about-project__center {
+        padding: 10px 380px;
+    }
+
+    .clinic-card {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+    .clinic-card__body-left {
+        display: flex;
+        flex-direction: column;
+        max-width: 800px;
+        width: 100%;
+        padding: 10px 0;
+    }
+}
+
+@media (max-width: 1000px) {
+    .info-about-project__center {
+        padding: 10px 310px;
+    }
+
+    .actions__top, .actions__mid, .actions__bot {
+        display: flex;
+        padding: 15px;
+        margin: 10px;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        align-content: center;
+    }
+
+    .grey-col {
+        height: 235px;
+    }
+
+}
+
+@media (max-width: 900px) {
+    .info-about-project__center {
+        padding: 10px 240px;
+    }
+
+    .footer__body {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: space-between;
+    }
+
+}
+
+
+@media (max-width: 700px) {
+    .info-about-project__center {
+        padding: 10px 150px;
+    }
+
+}
 
 
 
